# rust-srec

./: .dockerignore  .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Caddyfile  Cargo.toml  README.md  README.zh-CN.md  SECURITY.md
crates/av1/: Cargo.toml
crates/av1/src/: annex_b.rs  config.rs  error.rs  ivf.rs  lib.rs  obu_stream.rs  sample.rs
crates/danmaku/: Cargo.toml
crates/danmaku/src/: error.rs  lib.rs  message.rs  provider.rs  statistics.rs  writer.rs
crates/flv-fix/: Cargo.toml
crates/flv-fix/src/: adapter.rs  analyzer.rs  crc32.rs  lib.rs  operators.rs  pipeline.rs  script_modifier.rs  test_utils.rs  utils.rs  writer.rs  writer_task.rs
crates/h264/: Cargo.toml
crates/h264/src/: config.rs
crates/h265/: Cargo.toml
crates/h265/src/: config.rs  sps.rs
crates/hls-fix/: Cargo.toml
crates/hls-fix/src/: adapter.rs  analyzer.rs  crc32.rs  lib.rs  new_writer_task.rs  pipeline.rs  writer_task.rs
crates/mesio/: Cargo.toml  HLS_ENGINE_ARCHITECTURE.md  README.md
crates/mesio/docs/: DOWNLOADER_ENGINE_ARCHITECTURE_PLAN.md  HLS_ENGINE_ARCHITECTURE.md
crates/mesio/src/: builder.rs  bytes_stream.rs  config.rs  downloader.rs  error.rs  factory.rs  lib.rs  media_protocol.rs  protocol_builder.rs  proxy.rs  session.rs  source.rs
crates/mesio/tests/: hls_engine.rs
crates/mp4/: Cargo.toml
crates/mp4/benches/: fragment_validation_benchmark.rs
crates/mp4/src/: box_utils.rs  fragment.rs  isobmff.rs  lib.rs  test_support.rs
crates/pipeline-common/: Cargo.toml
crates/pipeline-common/benches/: channel_benchmark.rs  pipeline_benchmark.rs
crates/pipeline-common/examples/: pipeline_usage.rs
crates/pipeline-common/src/: cancellation.rs  channel_pipeline.rs  config.rs  context.rs  lib.rs  pipeline.rs  processor.rs  progress.rs  run_completion.rs  split_reason.rs  test_utils.rs  writer_task.rs  writer_task_common.rs
crates/platforms-cli/: Cargo.toml  README.md
crates/platforms-cli/src/: cli.rs  commands.rs  config.rs  main.rs  output.rs
crates/ts/: Cargo.toml
crates/ts/benches/: parser_benchmark.rs
crates/ts/examples/: zero_copy_demo.rs
crates/ts/src/: adaptation_field.rs  crc32.rs  descriptor.rs  error.rs  lib.rs  packet.rs  parser_owned.rs  parser_zero_copy.rs  pat.rs  pes.rs  pmt.rs  scte35.rs  zero_copy.rs
mesio-cli/: Cargo.toml  README.md
mesio-cli/src/: cli.rs  config.rs  error.rs  input.rs  lib.rs  main.rs  output.rs  processor.rs  utils.rs
mesio-cli/src/output/: pipe_flv_strategy.rs  pipe_hls_strategy.rs  provider.rs
mesio-cli/src/processor/: flv.rs  generic.rs  hls.rs  mod.rs
mesio-cli/src/utils/: mod.rs  params.rs  spans.rs  time.rs
rust-srec/: .env  .env.example  AGENTS.md  Cargo.toml  Dockerfile  Dockerfile.vapid  build.rs  docker-compose.yml  prometheus.yml  rust-srec.service
rust-srec/docs/: .dockerignore  .gitignore  AGENTS.md  index.md  package-lock.json  package.json  pnpm-lock.yaml  release-notes-body.md  release-notes.md
rust-srec/docs/.vitepress/: config.mts
rust-srec/docs/en/: donate.md  index.md
rust-srec/docs/public/: .env.zh.example  docker-compose.example.yml  docker-install-zh.sh  (+7 more)
rust-srec/examples/: webhook_receiver.rs
rust-srec/frontend/: .cta.json  .dockerignore  .env.development  .env.example  .gitattributes  .gitignore  .oxfmtrc.jsonc  .oxlintignore  AGENTS.md  Dockerfile  README.md  buf.gen.yaml  desktop-loading.html  entrypoint.sh  extract_output.txt  find_missing.py  index.desktop.html  lingui.config.ts  nginx.conf.template  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  theme-cache-id.ts  tsc_output.txt  tsconfig.json  vite.config.ts  vite.desktop.config.ts  vitest.config.ts
rust-srec/locales/: en.yml  zh-CN.yml
rust-srec/migrations/: 20250920193717_create_tables.sql  20250920193717_initial_schema.sql  20251213152000_monitor_outbox.sql  20251213160000_add_thumbnail_presets.sql  20251217000000_add_dag_support.sql  20251218000000_migrate_to_dag_pipelines.sql  20251226210000_add_session_pipelines.sql  20251227013000_add_danmaku_and_subtitle_presets.sql  20251229150000_add_auto_thumbnail.sql  20260101193000_fix_execute_presets.sql  20260104130000_clear_job_progress_on_reset.sql  20260108195000_add_streamlink_platform_config.sql  20260117130000_add_notification_event_log.sql  20260118010000_add_job_pending_indexes.sql  20260118020000_add_dag_segment_metadata.sql  20260208235000_add_pipeline_timeouts.sql  20260318120000_rename_interrupted_to_cancelled.sql  20260321233000_finalize_session_segment_lifecycle_timestamps.sql  20260402120000_add_nvidia_nvenc_presets.sql  20260408120000_priority_to_integer.sql  20260427210000_add_offline_check_overrides.sql  20260428001500_add_session_events.sql  20260503120000_add_streamer_check_history.sql  20260503190000_add_streams_extracted_json.sql  20260505000000_add_queue_freshness_threshold_ms.sql  20260509211609_add_gpu_health_probe_interval_secs.sql  20260510000000_remove_session_gap_time_secs.sql  20260510001000_add_gpu_health_probe_interval_secs.sql  20260530120000_fix_space_saver_and_delete_desc.sql  20260613000000_remove_dead_mesio_hls_config_keys.sql  20260714000000_add_bigo_platform.sql  20260715000000_add_soop_platform.sql  20260717000000_add_maintenance_cleanup_indexes.sql  20260722000000_add_stream_proxy_allow_private_targets.sql  20260723000000_backfill_job_pipeline_id.sql
rust-srec/plans/: concurrency-queued-observability.md  soop-platform-integration.md
rust-srec/proto/: douyin.proto  download_progress.proto  log_event.proto
rust-srec/src/: api.rs  backend.rs  config.rs  credentials.rs  danmu.rs  database.rs  domain.rs  downloader.rs  error.rs  i18n.rs  lib.rs  logging.rs  main.rs  metrics.rs  monitor.rs  notification.rs  panic_hook.rs  scheduler.rs  services.rs  streamer.rs  utils.rs
rust-srec/src-tauri/: AGENTS.md  Cargo.toml  README.md  build.rs  tauri.conf.json
rust-srec/tests/: domain_boundaries.rs  integration_tests.rs  job_execution_logs_persist.rs  sqlite_claim_stress.rs
strev-cli/: Cargo.toml  README.md
strev-cli/src/: cli.rs  commands.rs  config.rs  error.rs  lib.rs  main.rs  output.rs
(+1017 files in other folders)
