[workspace]
resolver = "3"

members = [
    "siphon-cli",
    "crates/flv",
    "crates/flv-fix",
    "crates/hls",
    "crates/hls-fix",
    "crates/siphon",
    "crates/aac",
    "crates/bytes-util",
    "crates/expgolomb",
    "crates/av1",
    "crates/h265",
    "crates/amf0",
    "crates/platforms",
    "crates/tars-codec",
    "crates/platforms-cli",
]

[workspace.package]
authors = ["hua0512"]
repository = "https://github.com/hua0512/rust-srec"
license = "MIT OR Apache-2.0"
edition = "2024"

[profile.release]
lto = true
codegen-units = 1
strip = true
opt-level = 3
panic = "abort"   # Removes panic unwinding code
debug = false

[profile.dev.package."*"]
# Optimize all dependencies in dev mode
crc32fast = "1.3.2"
opt-level = 1

[profile.dev]
# Keep debug info for development
debug = true
