[workspace]
resolver = "3"

members = [
    "mesio-cli",
    "strev-cli",
    "rust-srec",
    "crates/flv",
    "crates/flv-fix",
    "crates/hls",
    "crates/hls-fix",
    "crates/mesio",
    "crates/aac",
    "crates/bytes-util",
    "crates/expgolomb",
    "crates/av1",
    "crates/h265",
    "crates/h264",
    "crates/amf0",
    "crates/platforms",
    "crates/tars-codec",
    "crates/pipeline-common",
    "crates/ts",
]

[workspace.package]
authors = ["hua0512"]
repository = "https://github.com/hua0512/rust-srec"
license = "MIT OR Apache-2.0"
edition = "2024"

[profile.release]
lto = true
codegen-units = 1
strip = true
opt-level = 3
panic = "abort"   # Removes panic unwinding code
debug = false


[workspace.dependencies]
bytes = "1.11.0"
tokio = { version = "1.48.0", features = ["full"] }
tokio-util = { version = "0.7.17", features = ["full"] }
reqwest = { version = "0.12.26", default-features = false, features = ["json", "stream", "rustls-tls", "gzip", "deflate"] }
serde = { version = "1.0.217", features = ["derive", "rc"] }
serde_json = "1.0.138"
thiserror = "2.0.11"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "json"] }
async-trait = "0.1.89"
rand = "0.9.2"
regex = { version = "1.12.2", default-features = false, features = ["std", "unicode-perl"] }
futures = "0.3.31"
chrono = { version = "0.4.40", features = ["serde"] }
uuid = { version = "1.19.0", features = ["v4", "serde"] }
prost = "0.14.1"
prost-types = "0.14.1"
prost-build = "0.14.1"
parking_lot = "0.12.3"
sha2 = "0.10.8"
hex = "0.4.3"
flate2 = "1.0.35"
url = "2.5.4"
anyhow = "1.0.95"
tower = { version = "0.5.2", features = ["full"] }
tower-http = { version = "0.6.8", features = ["cors", "trace", "request-id", "fs"] }
tempfile = "3.16.0"
axum = { version = "0.8.4", features = ["ws"] }
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "sqlite", "macros", "uuid", "chrono", "json"] }
utoipa = { version = "5", features = ["axum_extras", "chrono", "uuid"] }
utoipa-swagger-ui = { version = "9", features = ["axum"] }
jsonwebtoken = { version = "10", features = ["aws_lc_rs"] }
mimalloc = "0.1.48"
argon2 = "0.5"
zip = { version = "3.0", default-features = false, features = ["deflate"] }
tar = "0.4"
strum = { version = "0.27.2", features = ["derive"] }
json-patch = "1.0"
chrono-tz = "0.10"
cron = "0.15"
dotenvy = "0.15"
sysinfo = { version = "0.37" }
tracing-appender = "0.2"
mockall = "0.14.0"
proptest = "1.4"
rstest = "0.26.1"
itertools = "0.14.0"
rquickjs = { version = "0.10.0", features = ["full-async"] }
tokio-tungstenite = { version = "0.28.0", default-features = false, features = ["connect"] }
m3u8-rs = "6.0.0"
md-5 = "0.10.6"
urlencoding = "2.1"
base64 = "0.22.1"
byteorder = "1.5"
brotli = "8.0"
openssl = { version = "0.10", features = ["vendored"] }
rustls = { version = "0.23.35", default-features = false, features = ["logging", "aws-lc-rs", "tls12"] }
rustls-platform-verifier = "0.6.2"
libsm = "0.6.0"
rsa = { version = "0.9.9", features = ["sha2"] }
rustc-hash = "2.1"
memchr = "2.7.6"
criterion = "0.7.0"

[profile.dev]
debug = true
