[package]
name = "mesio"
version = "0.3.6"
edition = "2024"
description = "Mesio (media) streaming downloader CLI"
license = "MIT OR Apache-2.0"
repository = "https://github.com/hua0512/rust-srec"

[dependencies]
bytes = { workspace = true }
byteorder = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "io-util", "sync"] }
tokio-util = { workspace = true }
futures = { workspace = true }
reqwest = { workspace = true, features = ["json", "stream", "rustls-tls"] }
crossterm = "0.29.0"

# CLI dependencies
clap = { version = "4.5", features = ["derive"] }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["ansi"] }
tracing-appender = { workspace = true }
tracing-indicatif = "0.3"

# Workspace crates
pipeline-common = { path = "../crates/pipeline-common" }
flv = { path = "../crates/flv" }
flv-fix = { path = "../crates/flv-fix" }
hls = { path = "../crates/hls" }
hls-fix = { path = "../crates/hls-fix" }
mesio-engine = { path = "../crates/mesio", features = ["clap"] }
indicatif = "0.18.2"
thiserror = { workspace = true }
mimalloc = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
m3u8-rs = { workspace = true }

