[package]
name = "rust-srec"
version = "0.1.0"
edition = "2024"
description = "An automatic online streaming recorder"
license = "MIT OR Apache-2.0"
repository = "https://github.com/hua0512/rust-srec"

[dependencies]
axum = { workspace = true }
serde = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
chrono-tz = { workspace = true }
cron = { workspace = true }
bytes = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
futures = { workspace = true }
anyhow = { workspace = true }
serde_json = { workspace = true }
json-patch = { workspace = true }
async-trait = { workspace = true }
strum = { workspace = true }
reqwest = { workspace = true }
sqlx = { workspace = true }

# Caching
dashmap = "5.5"
indexmap = "2"
parking_lot = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-appender = { workspace = true }
tracing-subscriber = { workspace = true }

sysinfo = { workspace = true }

# Workspace crates

pipeline-common = { path = "../crates/pipeline-common" }
flv = { path = "../crates/flv" }
flv-fix = { path = "../crates/flv-fix" }
hls = { path = "../crates/hls" }
hls-fix = { path = "../crates/hls-fix" }
mesio = { path = "../crates/mesio", package = "mesio-engine" }
platforms-parser = { path = "../crates/platforms" }
thiserror = { workspace = true }
dotenvy = { workspace = true }
rand = { workspace = true }
regex = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }

# OpenAPI / Swagger
utoipa = { workspace = true }
utoipa-swagger-ui = { workspace = true }
jsonwebtoken = { workspace = true }
mimalloc = { workspace = true }

# Cryptography for password hashing and token generation
argon2 = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }

# Protocol Buffers
prost = { workspace = true }
prost-types = { workspace = true }

# Compression
zip = { workspace = true }
flate2 = { workspace = true }
tar = { workspace = true }

[build-dependencies]
prost-build = { workspace = true }

[dev-dependencies]
mockall = { workspace = true }
proptest = { workspace = true }
rstest = { workspace = true }
tempfile = { workspace = true }
m3u8-rs = { workspace = true }


[profile.dev.package.sqlx-macros]
opt-level = 3

[features]
default = []
static-ssl = ["platforms-parser/static-ssl"]
