[package]
name = "rust-srec"
version.workspace = true
edition.workspace = true
description = "An automatic online streaming recorder"
license.workspace = true
repository = "https://github.com/hua0512/rust-srec"

[dependencies]
axum = { workspace = true }
serde = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
chrono-tz = { workspace = true }
cron = { workspace = true }
bytes = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
futures = { workspace = true }
anyhow = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
reqwest = { workspace = true }
sqlx = { workspace = true }
url = { workspace = true }
base64 = { workspace = true }
rustls = { workspace = true }
aes-gcm = "0.10"
hkdf = "0.12"
p256 = { version = "0.13", features = ["ecdsa", "ecdh"] }

# Caching
dashmap = "6.1"
parking_lot = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-appender = { workspace = true }
tracing-subscriber = { workspace = true, features = ["ansi", "json", "parking_lot"] }

sysinfo = { workspace = true }

# Workspace crates

pipeline-common = { path = "../crates/pipeline-common" }
flv = { path = "../crates/flv" }
flv-fix = { path = "../crates/flv-fix" }
hls = { path = "../crates/hls" }
hls-fix = { path = "../crates/hls-fix" }
mesio = { path = "../crates/mesio", package = "mesio-engine" }
platforms-parser = { path = "../crates/platforms" }
process-utils = { path = "../crates/process-utils" }
thiserror = { workspace = true }
dotenvy = { workspace = true }
rand = { workspace = true }
regex = { workspace = true }
tower = { version = "0.5.3", features = ["util"] }
tower-http = { workspace = true }

# OpenAPI / Swagger
utoipa = { workspace = true }
utoipa-swagger-ui = { workspace = true }
jsonwebtoken = { workspace = true }
mimalloc = { workspace = true }

# Cryptography for password hashing and token generation
argon2 = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }

# Protocol Buffers
prost = { workspace = true }
prost-types = { workspace = true }

# Compression
zip = { workspace = true }
flate2 = { workspace = true }
tar = { workspace = true }

[build-dependencies]
prost-build = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
m3u8-rs = { workspace = true }


[features]
default = []
static-ssl = ["platforms-parser/static-ssl", "mesio/static-ssl"]

# Opt-in: enable native-tls fallback for legacy endpoints (e.g. Douyu CDN / danmu).
tls-native-fallback = ["platforms-parser/tls-native-fallback", "mesio/tls-native-fallback"]
