[package]
name = "strev"
version = "0.2.0"
edition.workspace = true
description = "Strev (Streev) - CLI tool for streaming media extraction and retrieval from various platforms"
authors = ["rust-srec team"]
license.workspace = true
repository = "https://github.com/hua0512/rust-srec"

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
platforms-parser = { path = "../crates/platforms" }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
reqwest = { workspace = true }

tokio = { workspace = true, features = [
    "rt-multi-thread",
    "macros",
    "sync",
    "time",
] }

# CLI framework
clap = { version = "4.5", features = ["derive", "env", "string"] }
clap_complete = "4.5"

# UI and output (some made optional)
colored = { version = "3.1.1", optional = true }
indicatif = "0.18"
inquire = { version = "0.9", optional = true }
tabled = { version = "0.20", optional = true }

# Simplified configuration
dirs = "6"
toml = "1.0"

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter", "json"] }

# Utilities (some made optional)
url = { workspace = true }
regex = { workspace = true, optional = true }

[features]
default = ["interactive", "colored-output", "table-output", "regex-filters"]
interactive = ["inquire"]
colored-output = ["colored"]
table-output = ["tabled"]
regex-filters = ["regex"]
minimal = []                                                                 # No optional features
static-ssl = ["platforms-parser/static-ssl"]

# Opt-in: enable native-tls fallback for legacy TLS endpoints.
tls-native-fallback = ["platforms-parser/tls-native-fallback"]
