[package]
name = "av1"
version = "0.1.1"
edition.workspace = true
license.workspace = true

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage_nightly)'] }

[dependencies]
bytes = { workspace = true }
byteorder = { workspace = true }
bytes-util = { path = "../bytes-util" }
thiserror = { workspace = true }

[dev-dependencies]
insta = "1.46"
