[package]
name = "av1"
version = "0.1.1"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
bytes = { workspace = true }
byteorder = { workspace = true }
bytes-util = { path = "../bytes-util" }
thiserror = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
