[package]
name = "danmaku"
version = "0.1.0"
edition = "2024"
description = "A library for collecting live chat/danmu from streaming platforms"
license = "MIT OR Apache-2.0"
repository = "https://github.com/hua0512/rust-srec"

[dependencies]
# Core
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
quick-xml = { version = "0.36.0", features = ["serde", "serialize"] }


# Async runtime
tokio = { version = "1", features = ["sync", "time", "net", "io-util", "macros", "rt"] }
futures = "0.3"

# WebSocket (for Huya provider)
tokio-tungstenite = { version = "0.23.1", features = ["rustls-tls-native-roots"] }
bytes = "1"

# TLS (for Twitch provider)
tokio-rustls = { version = "0.26", default-features = false, features = ["ring", "tls12"] }
webpki-roots = "0.26"

# Protocol codecs
tars-codec = { path = "../tars-codec" }

# Utils
regex = "1.10"
uuid = { version = "1.18.1", features = ["v4"] }
rustc-hash = "2.0"
tracing = "0.1"
rand = "0.9.2"

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
proptest = "1.4"