[package]
name = "flv-fix"
version = "0.1.4"
edition = "2024"

[dependencies]
bytes = "1.10.1"
byteorder = "1.5.0"

futures = "0.3.31"
flv = { path = "../flv" }
amf0 = { path = "../amf0" }
pipeline-common = { path = "../pipeline-common" }
crc32fast = "1.4.2"
time = { version = "0.3.44", features = ["macros", "formatting", "parsing"] }
tracing = "0.1.41"
thiserror = "2.0.17"

[dev-dependencies]
tracing-subscriber = "0.3"
tokio = { version = "1.47.1", features = [
    "fs",
    "io-util",
    "rt",
    "macros",
    "rt-multi-thread",
] }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage_nightly)'] }
