[package]
name = "flv-fix"
version = "0.1.8"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
bytes = { workspace = true }
byteorder = { workspace = true }

futures = { workspace = true }
flv = { path = "../flv" }
amf0 = { path = "../amf0" }
pipeline-common = { path = "../pipeline-common" }
zlib-rs = { workspace = true }
time = { version = "0.3.46", features = ["macros", "formatting", "parsing"] }
tracing = { workspace = true }
tracing-indicatif = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["rt", "macros", "rt-multi-thread"] }

[dev-dependencies]
tempfile = { workspace = true }
tracing-subscriber = { workspace = true }
tokio = { workspace = true, features = [
    "fs",
    "io-util",
    "rt",
    "macros",
    "rt-multi-thread",
] }
