[package]
name = "h265"
version = "0.1.1"
edition.workspace = true
license.workspace = true

[dependencies]
bytes = { workspace = true }
byteorder = { workspace = true }
expgolomb = { path = "../expgolomb" }
bytes-util = { path = "../bytes-util" }
bitflags = "2.12.1"


[dev-dependencies]
insta = "1.47"


[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage_nightly)'] }
