[package]
name = "h265"
version = "0.1.1"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
bytes = { workspace = true }
byteorder = { workspace = true }
expgolomb = { path = "../expgolomb" }
bytes-util = { path = "../bytes-util" }
bitflags = "2.11.0"

[dev-dependencies]
insta = { workspace = true }
