[package]
name = "hls-fix"
version = "0.1.6"
edition = "2024"
description = "HLS processing toolkit"

[dependencies]
bytes = { workspace = true }
m3u8-rs = { workspace = true }
hls = { path = "../hls" }
pipeline-common = { path = "../pipeline-common" }
ts = { path = "../ts" }
crc32fast = "1.4.2"
tracing = { workspace = true }
tracing-indicatif = "0.3"
thiserror = { workspace = true }
tokio = { workspace = true, features = ["sync"] }

[dev-dependencies]
tracing-subscriber = { workspace = true }
tokio-util = { workspace = true }
tempfile = { workspace = true }


[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage_nightly)'] }
