[package]
name = "hls-fix"
version = "0.1.7"
edition.workspace = true
license.workspace = true
description = "HLS processing toolkit"

[dependencies]
bytes = { workspace = true }
m3u8-rs = { workspace = true }
hls = { path = "../hls" }
pipeline-common = { path = "../pipeline-common" }
ts = { path = "../ts" }
mp4 = { path = "../mp4" }
zlib-rs = { workspace = true }
tracing = { workspace = true }
tracing-indicatif = "0.3"
thiserror = { workspace = true }
tokio = { workspace = true, features = ["sync"] }

[dev-dependencies]
tracing-subscriber = { workspace = true }
tokio-util = { workspace = true }
tempfile = { workspace = true }
bytes-util = { path = "../bytes-util" }
expgolomb = { path = "../expgolomb" }
mp4 = { path = "../mp4", features = ["test-utils"] }


[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage_nightly)'] }
