[package]
name = "mesio-engine"
version = "0.1.9"
edition = "2024"
description = "Mesio (media) streaming downloader engine"
license = "MIT OR Apache-2.0"
repository = "https://github.com/hua0512/rust-srec"

[dependencies]
bytes = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "io-util"] }
tokio-util = { workspace = true }
tokio-stream = "0.1.18"
futures = { workspace = true }
reqwest = { workspace = true, features = [
    "json",
    "stream",
    "rustls-tls",
    "system-proxy",
    "socks",
    "gzip",
    "brotli",
    "deflate"
] }
url = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
m3u8-rs = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
sha2 = { workspace = true }
humansize = "2.0.0"
rand = { workspace = true }
moka = { version = "0.12", features = ["future"] }
aes = "0.8"
cbc = "0.1"
cipher = "0.4"
hex = { workspace = true }
clap = { version = "4.5", features = ["derive"], optional = true }
# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["fmt", "env-filter"] }
tracing-indicatif = "0.3"
indicatif = "0.18"

# Workspace crates
flv = { path = "../flv" }
hls = { path = "../hls" }

[dev-dependencies]
tokio = { version = "1.49.0", features = ["rt-multi-thread", "macros", "time"] }
proptest = "1.5"
