[package]
name = "pipeline-common"
version = "0.1.2"
edition.workspace = true
description = "Common traits and implementations for media processing pipelines"
license.workspace = true


[dependencies]
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-indicatif = "0.3"
time = { version = "0.3.46", features = ["local-offset"] }
tokio = { workspace = true, features = ["sync", "rt", "macros"] }
tokio-util = { workspace = true }

[dev-dependencies]
tracing-subscriber = { workspace = true }
tempfile = { workspace = true }
criterion = { workspace = true, features = ["async_tokio"] }
flume = "0.12.0"
crossbeam-channel = "0.5.10"

[[bench]]
name = "cloning_benchmark"
harness = false

[[bench]]
name = "channel_benchmark"
harness = false


[[bench]]
name = "dispatch_benchmark"
harness = false

[[bench]]
name = "pipeline_benchmark"
harness = false
