[package]
name = "platforms-cli"
version = "0.1.0"
edition = "2024"

[dependencies]

platforms-parser = { path = "../platforms" }
inquire = "0.7.5"
colored = "2.1.0"
tokio = { version = "1.46.0", features = ["full"] }
serde_json = "1.0"
clap = { version = "4.5.39", features = ["derive"] }
indicatif = "0.17.8"