[package]
name = "ts"
version = "0.1.2"
authors = ["hua0512"]
repository = "https://github.com/hua0512/rust-srec"
license = "MIT OR Apache-2.0"
edition = "2024"

[dependencies]
thiserror = { workspace = true }
bytes = { workspace = true }
memchr = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }

[[bench]]
name = "parser_benchmark"
harness = false


