[package]
name = "ts"
version = "0.1.3"
authors = ["hua0512"]
repository = "https://github.com/hua0512/rust-srec"
license.workspace = true
edition.workspace = true

[dependencies]
thiserror = { workspace = true }
bytes = { workspace = true }
memchr = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }

[[bench]]
name = "parser_benchmark"
harness = false
